# AITasker

./: Dockerfile  README.md  pyproject.toml
AITasker-frontEnd/: package-lock.json  package.json
AITasker-frontEnd/src/: App.vue
AITasker-frontEnd/src/components/: Card.vue  Header.vue
AITasker-frontEnd/src/views/: HomeView.vue
app/: case_api.py  case_status.py  conversation.py  customer_api.py  database.py  main.py  merchant_api.py  models.py  pyproject.toml  unauth.py
app/blueprints/: __init__.py  auth.py  case.py  case_status.py  conversation.py  customer.py  merchant.py
app/instance/: app.db
app/your_package/: conversation.py  database.py  main.py  task_api.py  user_api.py
chatRoom-frontEnd/: .firebaserc  package-lock.json  package.json
chatRoom-frontEnd/.firebase/: hosting.ZGlzdA.cache
chatRoom-frontEnd/src/: App.vue  firebase.js  main.js
chatRoom-frontEnd/src/assets/: main.css
chatRoom-frontEnd/src/router/: index.js
chatRoom-frontEnd/src/views/: ChatList.vue  ChatListHeader.vue  ChatRoom.vue  ChatRoomHeader.vue  HomeView.vue  Login.vue  SignUp.vue
instance/: app.db
langgraph/: langgrpah_PM.py  test.py
your_package/: main.py  models.py
your_package/auth/: __init__.py  routes.py
your_package/conversation/: __init__.py  routes.py
