[tool.poetry]
name = "conversation_system"
version = "0.1.0"
description = "A conversation system with JWT authentication"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "your_package"}]

[tool.poetry.dependencies]
python = "3.12.4"
Flask = "^3.0.3"
Flask-SQLAlchemy = "^3.0.4"
Flask-JWT-Extended = "^4.4.4"
SQLAlchemy = "^2.0.19"
blueprint = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"